--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,10 @@ before_install:
 
 script:
     - docker run -it --rm -v ~/publish:/root/publish -v ~/.nuget/packages:/root/nuget/packages webapp:test
+
+after_success:
+    - if [ "$TRAVIS_BRANCH" == "master" ]; then
+        docker build -t fredaso/webapp:autoLatest -f dockerfile/release .
+        docker login -u="$DOCKER_HUB_ID"" -p="$DOCKER_HUB_PASSWORD";
+        docker push fredaso/webapp:autoLatest;
+    fi
