Revert "Resollving bug 2.... maybe ?"
This reverts commit 8820251b59120731b502b60acb6e416969e182fb.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ script:
 after_success:
     - if [ "$TRAVIS_BRANCH" == "master" ]; then
         docker build -t fredaso/webapp:autoLatest -f dockerfile/release .
-        docker login -u="$DOCKER_HUB_ID"" -p="$DOCKER_HUB_PASSWORD"
-        docker push fredaso/webapp:autoLatest
+        docker login -u="$DOCKER_HUB_ID"" -p="$DOCKER_HUB_PASSWORD";
+        docker push fredaso/webapp:autoLatest;
