Resolving bug 4... The End Of A Great Saga

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ script:
 after_success:
     - if [ "$TRAVIS_BRANCH" == "master" ]; then
         docker build -t fredaso/webapp:autoLatest -f dockerfile/release .;
-        docker login -u="$DOCKER_HUB_ID"" -p="$DOCKER_HUB_PASSWORD";
+        docker login -u="$DOCKER_HUB_ID" -p="$DOCKER_HUB_PASSWORD";
         docker push fredaso/webapp:autoLatest;
         fi
