A new saga has begun
side-title : Looking for my publish

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ script:
 
 after_success:
     - if [ "$TRAVIS_BRANCH" == "master" ]; then
-        docker build -t fredaso/webapp:latest -f dockerfile/release .;
+        docker build -t webapp:release -f dockerfile/release .;
+        docker tag webapp:release fredaso/webapp:latest;
         docker login -u="$DOCKER_HUB_ID" -p="$DOCKER_HUB_PASSWORD";
         docker push fredaso/webapp:latest;
         fi
